# potatosync-notes

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  LeafletAPI.sln  README.md  Rocket.toml  SECURITY.md  aliases.js  all.html  amd64.Dockerfile  build.rs  crates.js  docker-compose.yml  docker.env  env.example  fn.delete_note.html  fn.main.html  fn.refresh_user.html  fn.rocket_route_fn_change_password.html  fn.rocket_route_fn_delete_all_notes.html  fn.rocket_route_fn_get_all_notes.html  fn.rocket_route_fn_login_user.html  fn.rocket_route_fn_new_user.html  fn.rocket_route_fn_save_note.html  fn.rocket_route_fn_verify_user.html  fn.token_error.html  fn.verify_user.html  index.html  rpi.Dockerfile  sample.env  search-index.js  settings.html  source-files.js  static.static_rocket_catch_info_for_token_error.html  static.static_rocket_route_info_for_delete_all_notes.html  static.static_rocket_route_info_for_get_all_notes.html  (+4 more)
.github/: dependabot.yml
BlobClient/: BlobClient.csproj  Dockerfile  Program.cs
LeafletAPI/: Dockerfile  LeafletAPI.csproj  Program.cs  appsettings.json
account/: index.html  sidebar-items.js
actix_codec/: all.html  index.html  sidebar-items.js  struct.BytesCodec.html  struct.Framed.html  struct.FramedParts.html  trait.AsyncRead.html  trait.AsyncWrite.html  trait.Decoder.html  trait.Encoder.html
actix_connect/: all.html  enum.ConnectError.html  fn.default_connector.html  fn.default_connector_factory.html  fn.new_connector.html  fn.new_connector_factory.html  fn.start_default_resolver.html  fn.start_resolver.html  index.html  sidebar-items.js  struct.Connect.html  struct.ConnectService.html  struct.ConnectServiceFactory.html  struct.Connection.html  struct.Resolver.html  struct.ResolverFactory.html  struct.TcpConnectService.html  struct.TcpConnector.html  struct.TcpConnectorFactory.html  trait.Address.html
actix_cors/: all.html  enum.CorsError.html  index.html  struct.Cors.html
actix_http/: all.html  enum.KeepAlive.html  enum.Payload.html  enum.Protocol.html  enum.RequestHeadType.html  index.html  macro.downcast.html  macro.downcast_get_type_id!.html  macro.downcast_get_type_id.html  macro.header.html  sidebar-items.js  struct.Extensions.html  struct.HttpService.html  struct.HttpServiceBuilder.html  struct.Message.html  struct.Request.html  struct.RequestHead.html  struct.Response.html  struct.ResponseBuilder.html  (+3 more)
(+35486 files in other folders)
