[package]
name = "potatosync-notes"
version = "0.1.0"
authors = ["bas"]
edition = "2018"
[[bin]]
name = "potatosync-notes"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", git = "https://github.com/martell/diesel.git", branch = "feature/pure_postgres", features = ["postgres", "r2d2", "chrono"] }
rocket = { version = "0.4.5", default-features = false }
serde = "1.0"
serde_json = "*"
serde_derive = "*"
serde_with = "*"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5.2"
diesel_migrations = { version = "1.4.0", git = "https://github.com/martell/diesel.git", branch = "feature/pure_postgres" }
rocket_failure = { version = "0.2" }
dotenv = "0.15.0"
validator = "0.13"
validator_derive = "0.10"
lazy_static = "1.4.0"
openssl = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7.2.0"
rocket_cors = "0.5.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dev-dependencies]
mocktopus = "0.7.0"
