[package]
name = "potatosync-notes"
version = "0.1.0"
authors = ["bas"]
edition = "2018"
[[bin]]
name = "potatosync-notes"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.11"
dotenv = "0.15"
derive_more = "0.99"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8"
jsonwebtoken = "7.2"
futures = "0.3"