[package]
name = "notes-proto"
version = "0.1.0"
authors = ["broodroosterdev <myth.usa538@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "postgres" ] }
jsonwebtoken = "7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.5"